# backend/app/api/v1/router.py
@@ -1,6 +1,6 @@
 from fastapi import APIRouter
 
-from app.api.v1 import auth, docs, health, posts, users
+from app.api.v1 import auth, comments, docs, health, posts, users
 from app.core.config import get_settings
 
 api_router = APIRouter()
@@ -8,6 +8,7 @@ api_router.include_router(health.router)
 api_router.include_router(auth.router)
 api_router.include_router(users.router)
 api_router.include_router(posts.router)
+api_router.include_router(comments.router)
 
 if get_settings().ENABLE_DOCS:
     api_router.include_router(docs.router)
